--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "dev":"node server.js",
+    "build":"npm i"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
