--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://Username:Password@cluster0.iqnp7qd.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://Username:myPassword0000@cluster0.iqnp7qd.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=kek
